--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor= eDP-1, disable
 monitor= DP-2,1920x1080@119.98,0x0,1
 
 # 17' External Monitor
-#monitor=  DP-2,1920x1080,auto-right,1
+#monitor=  DP-2,1920x1080,auto-left,1
 
 # Unknown
 monitor= Unknown-1, disable
@@ -270,8 +270,8 @@ bind = $mainMod, RETURN, layoutmsg, swapwithmaster
 bind = $mainMod, F, togglefloating,
 
 # Exit and restart
-bind = $mainMod ALT, X, exit,
-bind = $mainMod ALT, R, exec, hyprctl reload && pkill -SIGUSR2 waybar
+bind = $mainMod, DELETE, exit,
+bind = $mainMod, F12, exec, hyprctl reload && pkill -SIGKILL waybar && waybar
 
 # Favorite apps
 bind = $mainMod, E, exec, $fileManager
