--- a/hosts/p50/dotfiles/.config/kitty/kitty.conf
+++ b/hosts/p50/dotfiles/.config/kitty/kitty.conf
@@ -30,7 +30,8 @@ background_opacity 1
 confirm_os_window_close 0
 
 enable_audio_bell no
-visual_bell_duration 0.04
+visual_bell_duration 0.3
+visual_bell_color #555753
 
 window_padding_width 0 0
 
