Add key binding for btop

--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -248,6 +248,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Launching and killing programs
 bind = $mainMod SHIFT, RETURN, exec, $terminal
 bind = $mainMod, P, exec, pkill rofi || $menu
+bind = $mainMod, ESCAPE, exec, $terminal -e btop
 bind = $mainMod, Q, killactive,
 
 # Layout operations
