Add float windows

--- a/hosts/p50/dotfiles/.config/waybar/config.jsonc
+++ b/hosts/p50/dotfiles/.config/waybar/config.jsonc
@@ -126,6 +126,7 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%H:%M %a}",
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
@@ -200,22 +201,23 @@
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon}  {format_source}",
+        "format": "{icon} {volume}%  {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
+        "format-source": " {volume}%",
+        "format-source-muted": " ",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
+            "headphone": " ",
+            "hands-free": " ",
+            "headset": " ",
+            "phone": " ",
+            "portable": " ",
+            "car": " ",
+            "default": ["", " ", " "]
         },
-        "on-click": "pavucontrol"
+        //"on-click": "pavucontrol"
+        "on-click": "kitty -e pulsemixer"
     },
     "custom/media": {
         "format": "{icon} {text}",
