--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -54,7 +54,7 @@ $calculator = kitty --class=kitty-kalker -e tmux new-session -A -s 'Calc' kalker
 $terminalMultiplexer = kitty -e tmux new-session -A -s 'Default'
 $systemMonitoring = kitty --class=kitty-btop -e tmux new-session -A -s 'Btop' btop
 $flowHogs = kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
-
+$audioMixer = kitty --class=kitty-pulsemixer -e pulsemixer
 # Check `rofi -h` for help
 $menu = rofi -show combi -combi-modi "drun,run" -terminal "kitty" -font "IosevkaTerm Nerd Font 12" -show-icons -theme gruvbox-dark-hard -theme-str 'window {width: 25%;}'
 
@@ -306,7 +306,7 @@ bind = $mainMod, C, exec, $calculator
 bind = $mainMod SHIFT, backspace, exec, $terminalMultiplexer
 bind = $mainMod, ESCAPE, exec, $systemMonitoring
 bind = $mainMod, grave, exec, $flowHogs
-bind = $mainMod, M, exec, $terminal --class=kitty-pulsemixer -e pulsemixer
+bind = $mainMod, M, exec, $audioMixer
 
 # Window resize
 bind = $mainMod CTRL, h, resizeactive, -40 0
@@ -393,18 +393,22 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 windowrulev2 = float, class:^kitty-pulsemixer$
 windowrulev2 = size 800 600, class:^kitty-pulsemixer$
 windowrulev2 = pin, class:^kitty-pulsemixer$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-pulsemixer$
 
 # Window rule for btop
 windowrulev2 = float, class:^kitty-btop$
 windowrulev2 = size 1600 900, class:^kitty-btop$
 windowrulev2 = pin, class:^kitty-btop$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-btop$
 
 # Window rule for calculator
 windowrulev2 = float, class:^kitty-kalker$
 windowrulev2 = size 640 480, class:^kitty-kalker$
 windowrulev2 = pin, class:^kitty-kalker$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-kalker$
 
 # Window rule for nethogs
 windowrulev2 = float, class:^kitty-nethogs$
 windowrulev2 = size 1024 768, class:^kitty-nethogs$
 windowrulev2 = pin, class:^kitty-nethogs$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-nethogs$
