Commit on changes

--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -50,11 +50,11 @@ monitor= Unknown-1, disable
 # Set programs that you use
 $terminal = kitty
 $fileManager = $terminal -e yazi
-$calculator = kitty --class=kitty-kalker -e tmux new-session -A -s 'Calc' kalker
+$calculator = hyprctl dispatch closewindow "class:kitty-kalker" && kitty --class=kitty-kalker -e tmux new-session -A -s 'Calc' kalker
 $terminalMultiplexer = kitty -e tmux new-session -A -s 'Default'
-$systemMonitoring = kitty --class=kitty-btop -e tmux new-session -A -s 'Btop' btop
-$flowHogs = kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
-$audioMixer = kitty --class=kitty-pulsemixer -e pulsemixer
+$systemMonitoring = hyprctl dispatch closewindow "class:kitty-btop" && kitty --class=kitty-btop -e tmux new-session -A -s 'Btop' btop
+$flowHogs = hyprctl dispatch closewindow "class:kitty-nethogs" &&  kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
+$audioMixer = hyprctl dispatch closewindow "class:kitty-pulsemixer" && kitty --class=kitty-pulsemixer -e pulsemixer
 # Check `rofi -h` for help
 $menu = rofi -show combi -combi-modi "drun,run" -terminal "kitty" -font "IosevkaTerm Nerd Font 12" -show-icons -theme gruvbox-dark-hard -theme-str 'window {width: 25%;}'
 
