--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -298,6 +298,7 @@ bind = $mainMod, F, exec, hyprctl --batch "dispatch togglefloating; dispatch cen
 # Exit and restart
 bind = $mainMod, DELETE, exit
 bind = $mainMod, F12, exec, hyprctl reload && pkill -SIGKILL waybar && waybar
+bind = CTRL ALT, L, exec, hyprlock
 
 # Favorite apps
 bind = $mainMod, E, exec, $fileManager
