Commit on changes

--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -297,7 +297,7 @@ bind = $mainMod, RETURN, layoutmsg, swapwithmaster
 #bind = $mainMod, F, togglefloating,
 bind = $mainMod, F, exec, hyprctl --batch "dispatch togglefloating; dispatch centerwindow"
 
-# Exit and restart
+# Exit, Lock and restart
 bind = $mainMod, DELETE, exit
 bind = $mainMod, F12, exec, hyprctl reload && pkill -SIGKILL waybar && waybar
 bind = CTRL ALT, L, exec, hyprlock
