Commit on changes

--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -71,6 +71,7 @@ $notetaking = QOwnNotes
 # exec-once = $terminal
 exec-once = hyprpaper & waybar &
 exec-once = hypridle
+exec-once = systemctl --user start hyprpolkitagent.service
 exec-once = blueman-applet & blueman-tray
 exec-once = nm-applet
 exec-once = remmina -i
