--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -55,6 +55,8 @@ $terminalMultiplexer = kitty -e tmux new-session -A -s 'Default'
 $systemMonitoring = hyprctl dispatch closewindow "class:kitty-btop" && kitty --class=kitty-btop -e tmux new-session -A -s 'Btop' btop
 $flowHogs = hyprctl dispatch closewindow "class:kitty-nethogs" &&  kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
 $audioMixer = hyprctl dispatch closewindow "class:kitty-pulsemixer" && kitty --class=kitty-pulsemixer -e pulsemixer
+$tomato = hyprctl dispatch closewindow "class:kitty-tomato" && kitty --class=kitty-tomato -e tmux new-session -A -s 'Tomato' tomato
+
 # Check `rofi -h` for help
 $menu = rofi -show combi -combi-modi "drun,run" -terminal "kitty" -font "IosevkaTerm Nerd Font 12" -show-icons -theme gruvbox-dark-hard -theme-str 'window {width: 25%;}'
 
@@ -312,6 +314,7 @@ bind = $mainMod SHIFT, backspace, exec, $terminalMultiplexer
 bind = $mainMod, ESCAPE, exec, $systemMonitoring
 bind = $mainMod, grave, exec, $flowHogs
 bind = $mainMod, M, exec, $audioMixer
+bind = $mainMod, T, exec, $tomato
 
 # Window resize
 bind = $mainMod CTRL, h, resizeactive, -40 0
@@ -423,3 +426,8 @@ windowrulev2 = float, title:Bluetooth Devices
 windowrulev2 = size 1024 768, title:Bluetooth Devices
 windowrulev2 = pin, title:Bluetooth Devices
 
+# Window rule for Tomato (Pomodoro)
+windowrulev2 = float, class:^kitty-tomato$
+windowrulev2 = size 800 600, class:^kitty-tomato$
+windowrulev2 = pin, class:^kitty-tomato$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-tomato$
