Commit on changes

--- a/hosts/p50/dotfiles/.config/hypr/hyprlock.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprlock.conf
@@ -9,14 +9,10 @@ background {
     path = $HOME/Pictures/wallpaper.jpg
     color = rgba(25, 20, 20, 1.0)
 
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    # all these options are taken from hyprland,
+    # see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 2 # 0 disables blurring
-#    blur_size = 0
-    noise = 0
-    contrast = 1
     brightness = 0.5
-    vibrancy = 0.2
-    vibrancy_darkness = 0.2
 }
 
 input-field {
@@ -31,7 +27,7 @@ input-field {
     inner_color = rgba(242, 243, 244, 0)
     font_color = rgba(242, 243, 244, 0.75)
     fade_on_empty = false
-    placeholder_text = # Text rendered in the input box when it's empty.
+    placeholder_text = ... # Text rendered in the input box when it's empty.
     hide_input = false
     check_color = rgba(204, 136, 34, 0)
     fail_color = rgba(204, 34, 34, 0) # if authentication failed, changes outer_color and fail message color
@@ -75,17 +71,6 @@ label {
     text = Suhrob R. Nuraliev
     color = rgba(242, 243, 244, 0.75)
     font_size = 14
-    font_family = IosevkaTerm Nerd Font
-    position = 0, -407
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = Enter Password
-    color = rgba(242, 243, 244, 0.75)
-    font_size = 12
     font_family = IosevkaTerm Nerd Font
     position = 0, -438
     halign = center
