--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -238,7 +238,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:alt_shift_toggle, caps:escape
     kb_rules =
 
     numlock_by_default = true
