Fix kayboard layout in lock screen

--- a/hosts/p50/dotfiles/.config/hypr/hypridle.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-  lock_cmd = pidof hyprlock || hyprlock
+  lock_cmd = hyprctl switchxkblayout at-translated-set-2-keyboard 0 && pidof hyprlock || hyprlock
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on
 }
