--- a/hosts/p50/dotfiles/.config/hypr/hyprland.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hyprland.conf
@@ -303,7 +303,7 @@ bind = $mainMod, F, exec, hyprctl --batch "dispatch togglefloating; dispatch cen
 # Exit, Lock and restart
 bind = $mainMod, DELETE, exit
 bind = $mainMod, F12, exec, hyprctl reload && pkill -SIGKILL waybar && waybar
-bind = CTRL ALT, L, exec, hyprlock
+bind = CTRL ALT, L, exec, hyprctl switchxkblayout at-translated-set-2-keyboard 0 && hyprlock
 
 # Favorite apps
 bind = $mainMod, E, exec, $fileManager
