--- a/hosts/p50/dotfiles/.config/hypr/hypridle.conf
+++ b/hosts/p50/dotfiles/.config/hypr/hypridle.conf
@@ -13,5 +13,5 @@ listener {
 listener {
   timeout = 330
   on-timeout = hyprctl dispatch dpms off
-  on-resume = hyprctl dispatch dpms on
+  on-resume = hyprctl switchxkblayout at-translated-set-2-keyboard 0 && hyprctl dispatch dpms on
 }
