--- a/common/.config/hypr/hyprland.conf
+++ b/common/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ $systemMonitoring = hyprctl dispatch closewindow "class:kitty-btop" && kitty --c
 $flowHogs = hyprctl dispatch closewindow "class:kitty-nethogs" &&  kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
 $audioMixer = hyprctl dispatch closewindow "class:kitty-pulsemixer" && kitty --class=kitty-pulsemixer -e pulsemixer
 $tomato = hyprctl dispatch closewindow "class:kitty-tomato" && kitty --class=kitty-tomato -e tmux new-session -A -s 'Tomato' tomato
+$ai = hyprctl dispatch closewindow "class:kitty-ai" && kitty --class=kitty-ai -e tmux new-session -A -s 'AI' sudo docker exec -it ollama ollama run mistral
 
 # Check `rofi -h` for help
 $menu = rofi -show combi -combi-modi "drun,run" -terminal "kitty" -font "IosevkaTerm Nerd Font 12" -show-icons -theme gruvbox-dark-hard -theme-str 'window {width: 25%;}'
@@ -321,6 +322,7 @@ bind = $mainMod, ESCAPE, exec, $systemMonitoring
 bind = $mainMod, grave, exec, $flowHogs
 bind = $mainMod, M, exec, $audioMixer
 bind = $mainMod, T, exec, $tomato
+bind = $mainMod, I, exec, $ai
 
 # Window resize
 bind = $mainMod CTRL, h, resizeactive, -40 0
@@ -437,3 +439,9 @@ windowrulev2 = float, class:^kitty-tomato$
 windowrulev2 = size 800 600, class:^kitty-tomato$
 windowrulev2 = pin, class:^kitty-tomato$
 windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-tomato$
+
+# Window rule for nethogs
+windowrulev2 = float, class:^kitty-ai$
+windowrulev2 = size 1024 768, class:^kitty-ai$
+windowrulev2 = pin, class:^kitty-ai$
+windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-ai$
