Commit on changes

--- a/common/.config/hypr/hyprland.conf
+++ b/common/.config/hypr/hyprland.conf
@@ -440,8 +440,8 @@ windowrulev2 = size 800 600, class:^kitty-tomato$
 windowrulev2 = pin, class:^kitty-tomato$
 windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-tomato$
 
-# Window rule for nethogs
+# Window rule for AI
 windowrulev2 = float, class:^kitty-ai$
-windowrulev2 = size 1024 768, class:^kitty-ai$
+windowrulev2 = size 800 900, class:^kitty-ai$
 windowrulev2 = pin, class:^kitty-ai$
 windowrulev2 = bordercolor rgba(4e9a06ee), class:^kitty-ai$
