Commit on changes

--- a/common/.config/hypr/hyprland.conf
+++ b/common/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ $systemMonitoring = hyprctl dispatch closewindow "class:kitty-btop" && kitty --c
 $flowHogs = hyprctl dispatch closewindow "class:kitty-nethogs" &&  kitty --class=kitty-nethogs -e sudo nethogs -C -v 0
 $audioMixer = hyprctl dispatch closewindow "class:kitty-pulsemixer" && kitty --class=kitty-pulsemixer -e pulsemixer
 $tomato = hyprctl dispatch closewindow "class:kitty-tomato" && kitty --class=kitty-tomato -e tmux new-session -A -s 'Tomato' tomato
-$ai = hyprctl dispatch closewindow "class:kitty-ai" && kitty --class=kitty-ai -e tmux new-session -A -s 'AI' sudo docker exec -it ollama ollama run mistral
+$ai = hyprctl dispatch closewindow "class:kitty-ai" && kitty --class=kitty-ai -e tmux new-session -A -s 'AI' sudo docker exec -it ollama ollama run mistral-teacher
 
 # Check `rofi -h` for help
 $menu = rofi -show combi -combi-modi "drun,run" -terminal "kitty" -font "IosevkaTerm Nerd Font 12" -show-icons -theme gruvbox-dark-hard -theme-str 'window {width: 25%;}'
