Commit on changes

--- a/common/.config/hypr/hyprland.conf
+++ b/common/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor= eDP-1, 1920x1080,0x0,1
 # 24' Asus TUF Gaming
 #monitor= DP-2, disable
 #monitor= DP-2,1920x1080@119.98,0x0,1
-monitor= DP-5, 1920x1080@239.76,0x0,1
+#monitor= DP-5, 1920x1080@239.76,0x0,1
 
 # 17' External Monitor
 #monitor=  DP-2,1920x1080,auto-left,1
