Fix Waybar startup launch issue

--- a/common/.config/hypr/hyprland.conf
+++ b/common/.config/hypr/hyprland.conf
@@ -79,6 +79,7 @@ exec-once = systemctl --user start hyprpolkitagent.service
 exec-once = nm-applet
 exec-once = remmina -i
 exec-once = blueman-applet && blueman-tray
+exec-once = sleep 6; qsyncthingtray
 
 #############################
 ### ENVIRONMENT VARIABLES ###
